# routes/index.js
@@ -1,10 +1,6 @@
 const express = require('express');
 const router = express.Router();
 
-router.get('/test', (req, res) => {
-    res.send("Donny Hayes");
-});
-
 router.use('/contacts', require('./contacts'))
 
 module.exports = router;
